fix put to queue